Stage 2 used Inflater instead of InputStream